--- a/index.html
+++ b/index.html
@@ -11,28 +11,18 @@
         <h1>CSGO-ODDS</h1>
         <p>Place your bet and spin the roulette!</p>
         <div class="roulette-container">
-            <div id="roulette" class="roulette">
-                <div class="number" style="background-color: green;">0</div>
-                <div class="number" style="background-color: red;">1</div>
-                <div class="number" style="background-color: black;">2</div>
-                <div class="number" style="background-color: red;">3</div>
-                <div class="number" style="background-color: black;">4</div>
-                <div class="number" style="background-color: red;">5</div>
-                <div class="number" style="background-color: black;">6</div>
-                <div class="number" style="background-color: red;">7</div>
-                <div class="number" style="background-color: black;">8</div>
-                <div class="number" style="background-color: red;">9</div>
-                <div class="number" style="background-color: black;">10</div>
-                <div class="number" style="background-color: red;">11</div>
-                <div class="number" style="background-color: black;">12</div>
-                <div class="number" style="background-color: red;">13</div>
-                <div class="number" style="background-color: black;">14</div>
-            </div>
+            <div id="roulette" class="roulette"></div>
+            <div class="indicator"></div>
         </div>
         <div class="bet-options">
             <button id="betRed">Bet on Red (2x)</button>
             <button id="betBlack">Bet on Black (2x)</button>
             <button id="betGreen">Bet on Green (14x)</button>
+        </div>
+        <div class="bet-amounts">
+            <p id="betRedAmount">Bet on Red: 0 coins</p>
+            <p id="betBlackAmount">Bet on Black: 0 coins</p>
+            <p id="betGreenAmount">Bet on Green: 0 coins</p>
         </div>
         <div class="bet-container">
             <input type="number" id="betAmount" placeholder="Enter bet amount" min="1">
