--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSGO Roulette</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <div class="wheel">
+        {% for i in range(15) %}
+            <div class="box" id="box{{i}}"></div>
+        {% endfor %}
+    </div>
+    <button id="spinButton">Spin</button>
+    <div id="result"></div>
 
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+</body>
+</html>
