--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wheel">
-        <div id="box0" class="box"></div>
-        <div id="box1" class="box"></div>
-        <div id="box2" class="box"></div>
-        <div id="box3" class="box"></div>
-        <div id="box4" class="box"></div>
-        <div id="box5" class="box"></div>
-        <div id="box6" class="box"></div>
-        <div id="box7" class="box"></div>
-        <div id="box8" class="box"></div>
-        <div id="box9" class="box"></div>
-        <div id="box10" class="box"></div>
-        <div id="box11" class="box"></div>
-        <div id="box12" class="box"></div>
-        <div id="box13" class="box"></div>
-        <div id="box14" class="box"></div>
+    <div class="container">
+        <div class="wheel">
+            <!-- Boxes for the wheel -->
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #FF0000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #000;"></div>
+            <div class="box" style="background-color: #00FF00;"></div>
+        </div>
+        <button id="spinButton">Spin</button>
+        <div id="result"></div>
     </div>
-    <button id="spinButton">Spin</button>
-    <div id="result"></div>
 
     <script src="script.js"></script>
 </body>
