--- a/index.html
+++ b/index.html
@@ -3,76 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun Gambling Site</title>
+    <title>Interactive Roulette</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">TRADE</a></li>
-                <li><a href="#">GAMES</a></li>
-                <li><a href="#">ESPORTS</a></li>
-                <li><a href="#">PVP</a></li>
-                <li><a href="#">AFFILIATES</a></li>
-                <li><a href="#">REWARDS</a></li>
-            </ul>
-        </nav>
-        <div class="user-info">
-            <span class="balance">Balance: 0.00</span>
-            <button class="add-funds">Add Funds</button>
-            <div class="profile-pic">
-                <img src="user-avatar.png" alt="User Avatar">
+    <div class="container">
+        <!-- Header -->
+        <header>
+            <div class="logo">
+                <h1>Roulette</h1>
             </div>
-        </div>
-    </header>
-
-    <main>
-        <section class="recent-results">
-            <h2>LAST 100 RESULTS</h2>
-            <div class="results">
-                <!-- Dynamic results will go here -->
-            </div>
-        </section>
-
-        <section class="jackpot">
-            <h2>TRIPLE GREEN JACKPOT</h2>
-            <div class="jackpot-amount">
-                $3,471.30
-            </div>
-        </section>
-
-        <section class="roulette">
-            <div class="roulette-wheel">
-                <div id="wheel"></div>
-                <button id="spin-wheel">SPIN</button>
-            </div>
-            <div class="betting-area">
-                <input type="number" id="bet-amount" placeholder="Enter Bet" />
-                <div class="bet-options">
-                    <button class="bet-option" data-multiplier="2x">Win 2x</button>
-                    <button class="bet-option" data-multiplier="14x">Win 14x</button>
-                    <button class="bet-option" data-multiplier="7x">Win 7x</button>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Betting</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Rewards</a></li>
+                </ul>
+            </nav>
+            <div class="user">
+                <img class="profile-pic" src="profile.png" alt="Profile">
+                <div class="user-info">
+                    <span class="username">Player123</span>
+                    <span class="status">Online</span>
                 </div>
-                <button class="place-bet">Place Bet</button>
+                <div class="balance">
+                    <span id="balance">1000</span> Coins
+                </div>
             </div>
-        </section>
+        </header>
 
-        <section class="bet-history">
-            <h2>Bet History</h2>
-            <div class="history">
-                <!-- Dynamic bet history will go here -->
-            </div>
-        </section>
-    </main>
+        <!-- Main Content -->
+        <main>
+            <section class="roulette-area">
+                <div id="wheel" class="roulette-wheel"></div>
+                <button id="spinBtn" class="spin-btn">Spin</button>
+            </section>
 
-    <div class="chat-support">
-        <button class="chat-button">Chat Support</button>
+            <section class="betting-area">
+                <div class="bet-input">
+                    <label for="betAmount">Bet Amount:</label>
+                    <input type="number" id="betAmount" value="10" min="1" max="100">
+                </div>
+                <div class="betting-options">
+                    <button class="bet-btn" data-bet="straight">Straight Bet</button>
+                    <button class="bet-btn" data-bet="split">Split Bet</button>
+                </div>
+            </section>
+
+            <!-- Recent Results -->
+            <section class="recent-results">
+                <h2>Recent Results</h2>
+                <div id="recentResults" class="results"></div>
+            </section>
+        </main>
+
+        <!-- Footer -->
+        <footer>
+            <button class="support-btn">Support</button>
+        </footer>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
