--- a/index.html
+++ b/index.html
@@ -3,68 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Roulette</title>
+    <title>Roulette Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header>
-            <div class="logo">
-                <h1>Roulette</h1>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Roulette Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#"><i class="fas fa-trophy"></i> ESPORTS</a></li>
+                <li><a href="#"><i class="fas fa-coins"></i> REWARDS</a></li>
+                <li><a href="#"><i class="fas fa-user"></i> PROFILE</a></li>
+            </ul>
+        </nav>
+        <div class="user-account">
+            <div class="balance">1000</div>
+            <div class="profile-pic">
+                <img src="profile.png" alt="Profile Picture">
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Betting</a></li>
-                    <li><a href="#">History</a></li>
-                    <li><a href="#">Rewards</a></li>
-                </ul>
-            </nav>
-            <div class="user">
-                <img class="profile-pic" src="profile.png" alt="Profile">
-                <div class="user-info">
-                    <span class="username">Player123</span>
-                    <span class="status">Online</span>
-                </div>
-                <div class="balance">
-                    <span id="balance">1000</span> Coins
-                </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="recent-results">
+            <h2>Recent Results</h2>
+            <div class="results-container">
+                <div class="result">7</div>
+                <div class="result">12</div>
+                <div class="result">3</div>
+                <!-- More results will be added dynamically -->
             </div>
-        </header>
+            <button id="pause-play">Pause</button>
+        </section>
 
-        <!-- Main Content -->
-        <main>
-            <section class="roulette-area">
-                <div id="wheel" class="roulette-wheel"></div>
-                <button id="spinBtn" class="spin-btn">Spin</button>
-            </section>
+        <section class="jackpot-display">
+            <h2>Jackpot</h2>
+            <div class="coin-counter">0</div>
+        </section>
 
-            <section class="betting-area">
-                <div class="bet-input">
-                    <label for="betAmount">Bet Amount:</label>
-                    <input type="number" id="betAmount" value="10" min="1" max="100">
-                </div>
-                <div class="betting-options">
-                    <button class="bet-btn" data-bet="straight">Straight Bet</button>
-                    <button class="bet-btn" data-bet="split">Split Bet</button>
-                </div>
-            </section>
+        <section class="roulette-wheel">
+            <div class="wheel"></div>
+            <button id="spin-button">Spin</button>
+        </section>
 
-            <!-- Recent Results -->
-            <section class="recent-results">
-                <h2>Recent Results</h2>
-                <div id="recentResults" class="results"></div>
-            </section>
-        </main>
+        <section class="betting-area">
+            <div class="bet-amount">
+                <input type="number" id="bet-input" value="10">
+                <button id="increase-bet">+</button>
+                <button id="decrease-bet">-</button>
+            </div>
+            <div class="bet-options">
+                <button class="bet-option" data-bet="straight">Straight Bet</button>
+                <button class="bet-option" data-bet="split">Split Bet</button>
+                <!-- More bet options -->
+            </div>
+            <div class="bet-history">
+                <h2>Bet History</h2>
+                <div class="history-container"></div>
+            </div>
+        </section>
+    </main>
 
-        <!-- Footer -->
-        <footer>
-            <button class="support-btn">Support</button>
-        </footer>
-    </div>
+    <footer>
+        <div class="support">
+            <button id="support-button"><i class="fas fa-question-circle"></i> Support</button>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
-
