--- a/index.html
+++ b/index.html
@@ -3,83 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSGO</title>
+    <title>CSGO Roulette</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header>
-            <h1>CSGO</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Roll</a></li>
-                    <li><a href="#">Leaderboard</a></li>
-                    <li><a href="#">Support</a></li>
-                </ul>
-            </nav>
+            <h1>CSGO Roulette</h1>
+            <div class="balance">
+                <span>Coins: </span>
+                <span id="balance">1000</span>
+            </div>
         </header>
 
         <!-- Main Game Area -->
         <main>
-            <!-- Timer Section -->
-            <section class="timer">
-                <h2>ROLLING IN <span id="countdown">3.16</span></h2>
+            <!-- Roulette Wheel -->
+            <section class="roulette-wheel">
+                <div class="wheel">
+                    <div class="slots">
+                        <!-- Slots will be generated dynamically -->
+                    </div>
+                </div>
+                <div class="pointer"></div>
             </section>
 
-            <!-- Rotation Section -->
-            <section class="rotation">
-                <div class="rotation-item">
-                    <p>1:0.04</p>
-                    <p>Win 2x</p>
-                    <p>Read list</p>
+            <!-- Betting Area -->
+            <section class="betting-area">
+                <div class="bet-amount">
+                    <label for="bet-input">Bet Amount:</label>
+                    <input type="number" id="bet-input" value="10" min="1">
+                    <button id="place-bet">Place Bet</button>
                 </div>
-            </section>
-
-            <!-- Bits Section -->
-            <section class="bits">
-                <div class="bits-item">
-                    <h3>2 bits</h3>
-                    <p>Player 1</p>
-                    <p>Player 2</p>
+                <div class="bet-options">
+                    <button class="bet-option" data-color="red">Red</button>
+                    <button class="bet-option" data-color="black">Black</button>
+                    <button class="bet-option" data-color="green">Green</button>
                 </div>
-                <div class="bits-item">
-                    <h3>4.00</h3>
-                    <p>0.05</p>
-                </div>
-                <div class="bits-item">
-                    <h3>5 bits</h3>
-                    <p>Win 14x</p>
-                    <p>Read list</p>
-                </div>
-                <!-- Add more bits items as needed -->
-            </section>
-
-            <!-- Controls Section -->
-            <section class="controls">
-                <button>CLÉAR</button>
-                <button>LGF</button>
-                <button>+30</button>
-                <button>+300</button>
-                <button>+500</button>
-                <button>3/2</button>
-                <button>50</button>
-                <button>MAX</button>
             </section>
 
             <!-- Results Section -->
             <section class="results">
                 <h2>Recent Results</h2>
                 <div class="results-list">
-                    <p>Win 2x</p>
-                    <p>Place Set</p>
-                    <p>7 Bots</p>
-                    <p>4 UnUnUnUnBE...</p>
-                    <p>Player 1</p>
-                    <p>Player 2</p>
-                    <p>Player 3</p>
-                    <p>Player 4</p>
+                    <!-- Results will be added dynamically -->
                 </div>
             </section>
         </main>
