--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <!-- Results will be added dynamically -->
                 </div>
             </section>
+
+            <!-- Notification System -->
+            <div id="notification"></div>
         </main>
     </div>
 
